[package]
name = "shadowcopy-bc"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
pyo3 = { version = "0.22.2", features = ["extension-module"] }
regex = "1.10.6"
rustypath = "1.0.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sha2 = "0.10.8"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"
